kubernetes/apps/media/prowlarr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prowlarr.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external.krapulax.dev
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - prowlarr.krapulax.dev
  rules:
    - backendRefs:
        - name: prowlarr
          namespace: media
          port: 9696
